--- a/_config.yml
+++ b/_config.yml
@@ -29,5 +29,5 @@ active: 技术                                 #自定义常量
 subscribe_rss: /pages/atom.xml              #订阅地址
 markdown: kramdown                         #markdown解释器
 
-disqus:
-  shortname: https-jaytongSPH-github-io
+#disqus:
+#  shortname: https-jaytongSPH-github-io
